--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -1,10 +1,9 @@
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lagn="ko"
+      xmlns:th="http://www.thymeleaf.org">
 
+<!--footerFragment 선언-->
+<div th:fragment="footerFragment">
+    <h1>FOOTER</h1>
+</div>
 
-
-<th:block  th:fragment = "footerFragment">
-
-    <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
-    </div>
-</th:block>
+</html>
