--- a/src/main/resources/templates/fragment/top.html
+++ b/src/main/resources/templates/fragment/top.html
@@ -9,9 +9,9 @@
         <meta name="author" content="" />
         <title>Blog Home - Start Bootstrap Template</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="../../static/assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="../../static/css/styles.css" rel="stylesheet" />
     </head>
 </th:block>
 </html>
