--- a/src/main/resources/templates/fragment/config.html
+++ b/src/main/resources/templates/fragment/config.html
@@ -7,9 +7,8 @@
 
 
     <!-- 이 영역에 공통으로 사용할 css, js library를 선언한다. -->
-    <link rel="stylesheet" th:href="@{/css/common/common.css}" >
 
-    <script th:src="@{/js/common/common.js}"></script>
+<!--    <script th:src="@{/js/scripts}"></script>-->
 
     <!-- Content Page의 CSS fragment 삽입 -->
     <th:block layout:fragment="css"></th:block>
