--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,13 +6,11 @@
 
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
-<!--    <link rel="stylesheet" th:href="@{/css/page/home.css}" >-->
+    <link rel="icon" type="image/x-icon" th:href="@{/assets/favicon.ico}" />
+    <link rel="stylesheet" th:href="@{/css/styles.css}" >
 </th:block>
 
-<!-- index.html 고유 스크립트 추가 -->
-<!--<th:block layout:fragment="script">-->
-<!--    &lt;!&ndash;    <script th:src="@{/js/page/home.js}"></script>&ndash;&gt;-->
-<!--</th:block>-->
+
 
 <div layout:fragment="content">
     <h1>content</h1>
