--- a/src/main/resources/templates/layouts/default_layout.html
+++ b/src/main/resources/templates/layouts/default_layout.html
@@ -16,6 +16,9 @@
 <!-- header fragment 사용 -->
 <th:block th:replace="fragment/header :: headerFragment"></th:block>
 
+<!-- top fragment -->
+<th:block th:replace="fragment/top :: topbarFragment"></th:block>
+
 <!--
     content fragment 사용
     현재 layout을 사용하는 content fragment의 내용을 삽입한다.
